# Interactive-Canvas-Dynamic-Text-Renderer

./: CMakeLists.txt  README.md
src/: console_input_manager.cpp  console_input_manager.hpp  main.cpp
